# peregrine

./: CMakeLists.txt  Makefile  build.sh  conanfile.txt  configure.sh  logger.cpp  logger.hpp  logger.py  main.cpp  readme.md
include/peregrine/: logger.hpp  logger_c.h
src/: CMakeLists.txt  logger.cpp  logger_c.cpp  main.cpp
test/: CMakeLists.txt  test.cpp
test/wrapper_test/: client.c  client.cpp
